8206986: Compiler support for Switch Expressions (Preview) 8207405: Compiler Tree API support for Switch Expressions (Preview)
Support for switch expression, switch with rules and multiple constants for cases.

Reviewed-by: jjg, mcimadamore, vromero